--- a/css/general.css
+++ b/css/general.css
@@ -9,21 +9,7 @@ body{
   font-weight: 400;
   color: #555;
 }
-.section-hero{
-  background-color: #fdf2e9;
-  padding: 9.6rem 0;
-  
-}
-.hero{
-  max-width:130rem;
-  margin: 0 auto;
-  display:grid;
-  gap: 9.6rem;
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
-  
-
-}
+/*=============general components==============*/
 .heading-primary{
   font-size: 5.2rem;
   font-weight: 700;
@@ -32,21 +18,19 @@ body{
   letter-spacing: -0.5px;
   margin-bottom: 3.2rem;
 }
-.hero-description{
-  font-size: 2rem;
-  line-height: 1.6;
-  margin-bottom: 4.8rem;
-}
 
-.btn:link, .btn:visited{
+.btn:link, 
+.btn:visited{
   display: inline-block;
-  background-color: #e67e22;
   text-decoration: none;
   font-size: 2rem;
+  font-weight: 600;
   padding: 1.6rem 3.2rem;
   border-radius: 9px;
-  transition: all 0.3s;
-  font-weight: 600;
+
+  /* put transiton on original "state" */
+  transition: background-color 0.3s;
+  
 }
 
 .btn--full:link, 
@@ -71,13 +55,84 @@ body{
   /* Trick to add border */
   box-shadow: inset 0 0 0 3px #fff; 
 }
-.hero-img{
-  width: 100%;
-}
 
 .margin-right-sm{
   margin-right: 1.6rem !important;
 }
+/*==================header=====================*/
+.header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fdf2e9;
+
+  /* Because we want heade to be sticky after */
+  height: 9.6rem;
+  padding: 0 4.8rem;
+}
+.logo{
+  height: 2.2rem;
+}
+.main-nav-list{
+  list-style:none;
+  display: flex;
+  gap: 3.2rem;
+  align-items: center;
+}
+.main-nav-link:link,
+.main-nav-link:visited{
+  display: inline-block;
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  font-size: 1.8rem;
+  transition: all 0.3s;
+}
+.main-nav-link:hover,
+.main-nav-link:active{
+  color: #b8651b;
+}
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited{
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  color: #fff;
+  background-color: #e67e22;
+  /* put transiton on original "state" */   
+}
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active{
+background-color: #cf711f;
+}
+
+/*==================section hero=====================*/
+.section-hero{
+  background-color: #fdf2e9;
+  padding: 4.8rem  0 9.6rem 0;
+  
+}
+.hero{
+  max-width:130rem;
+  padding: 0 3.2rem;
+  margin: 0 auto;
+  display:grid;
+  gap: 9.6rem;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+}
+
+.hero-description{
+  font-size: 2rem;
+  line-height: 1.6;
+  margin-bottom: 4.8rem;
+}
+
+
+.hero-img{
+  width: 100%;
+}
+
+
 
 .deleverd-meals{
   display: flex;
@@ -105,5 +160,5 @@ body{
 }
 .deleverd-text span{
   color: #e67e22;
-  font-weight: 600;
+  font-weight: 700;
 }
