--- a/css/general.css
+++ b/css/general.css
@@ -10,15 +10,44 @@ body{
   color: #555;
 }
 /*=============general components==============*/
-.heading-primary{
-  font-size: 5.2rem;
-  font-weight: 700;
-  line-height: 1.05;
-  color: #333;
-  letter-spacing: -0.5px;
-  margin-bottom: 3.2rem;
+
+
+.container{
+  max-width: 120rem;
+  padding: 0 3.2rem;
+  margin: 0 auto;
+}
+.grid{
+  display: grid;
+  gap: 9.6rem;
+  
 }
 
+.grid--2-cols{
+  grid-template-columns: repeat(2, 1fr);
+}
+.grid--3-cols{
+  grid-template-columns: repeat(3, 1fr);
+}
+.heading-primary, 
+.heading-secondary{
+  font-weight: 700;
+  color: #2e1907;
+  letter-spacing: -0.5px;
+}
+.heading-primary{
+  font-size: 5.2rem;
+  line-height: 1.05;
+  margin-bottom: 3.2rem;
+}
+.heading-secondary{
+  font-size: 4.4rem;
+  line-height: 1.2;
+}
+
+.subheading{
+
+}
 .btn:link, 
 .btn:visited{
   display: inline-block;
@@ -59,6 +88,8 @@ body{
 .margin-right-sm{
   margin-right: 1.6rem !important;
 }
+
+
 /*==================header=====================*/
 .header{
   display: flex;
@@ -161,4 +192,13 @@ background-color: #cf711f;
 .deleverd-text span{
   color: #e67e22;
   font-weight: 700;
+}
+
+/*==================section how=====================*/
+.section-how{
+  padding: 9.6rem 0;
+}
+
+.step-img{
+width: 50%;
 }
