--- a/css/general.css
+++ b/css/general.css
@@ -19,8 +19,8 @@ body{
 }
 .grid{
   display: grid;
-  gap: 9.6rem;
-  
+  column-gap: 6.4rem;
+  row-gap: 9.6rem;
 }
 
 .grid--2-cols{
@@ -29,10 +29,16 @@ body{
 .grid--3-cols{
   grid-template-columns: repeat(3, 1fr);
 }
+.grid--center-v{
+  align-items: center;
+}
 .heading-primary, 
-.heading-secondary{
+.heading-secondary,
+.heading-tertiary{
   font-weight: 700;
   color: #2e1907;
+  color: #45260a;
+  color: #343a40;
   letter-spacing: -0.5px;
 }
 .heading-primary{
@@ -43,10 +49,21 @@ body{
 .heading-secondary{
   font-size: 4.4rem;
   line-height: 1.2;
+  margin-bottom: 9.6rem;
 }
-
+.heading-tertiary{
+  font-size: 3rem;
+  line-height: 1.2;
+  margin-bottom: 3.2rem;
+}
 .subheading{
-
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 500;
+  color:#e67e22;
+  text-transform: uppercase;
+  margin-bottom: 1.6rem;
+  letter-spacing: 0.75;
 }
 .btn:link, 
 .btn:visited{
@@ -90,115 +107,3 @@ body{
 }
 
 
-/*==================header=====================*/
-.header{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #fdf2e9;
-
-  /* Because we want heade to be sticky after */
-  height: 9.6rem;
-  padding: 0 4.8rem;
-}
-.logo{
-  height: 2.2rem;
-}
-.main-nav-list{
-  list-style:none;
-  display: flex;
-  gap: 3.2rem;
-  align-items: center;
-}
-.main-nav-link:link,
-.main-nav-link:visited{
-  display: inline-block;
-  text-decoration: none;
-  color: #333;
-  font-weight: 500;
-  font-size: 1.8rem;
-  transition: all 0.3s;
-}
-.main-nav-link:hover,
-.main-nav-link:active{
-  color: #b8651b;
-}
-.main-nav-link.nav-cta:link,
-.main-nav-link.nav-cta:visited{
-  padding: 1.2rem 2.4rem;
-  border-radius: 9px;
-  color: #fff;
-  background-color: #e67e22;
-  /* put transiton on original "state" */   
-}
-.main-nav-link.nav-cta:hover,
-.main-nav-link.nav-cta:active{
-background-color: #cf711f;
-}
-
-/*==================section hero=====================*/
-.section-hero{
-  background-color: #fdf2e9;
-  padding: 4.8rem  0 9.6rem 0;
-  
-}
-.hero{
-  max-width:130rem;
-  padding: 0 3.2rem;
-  margin: 0 auto;
-  display:grid;
-  gap: 9.6rem;
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
-}
-
-.hero-description{
-  font-size: 2rem;
-  line-height: 1.6;
-  margin-bottom: 4.8rem;
-}
-
-
-.hero-img{
-  width: 100%;
-}
-
-
-
-.deleverd-meals{
-  display: flex;
-  margin-top: 8rem;
-  align-items: center;
-}
-
-.deleverd-imgs{
-  display: flex;
-}
-
-.deleverd-imgs img{
-  height: 4.8rem;
-  width: 4.8rem;
-  border-radius: 50%;
-  margin-left: -1.6rem;
-  border: 3px solid #fdf2e9;
-}
-.deleverd-imgs img:hover{
-  margin-top: -0.6rem;
-}
-.deleverd-text{
-  font-size: 1.8rem;
-  font-weight: 600;
-}
-.deleverd-text span{
-  color: #e67e22;
-  font-weight: 700;
-}
-
-/*==================section how=====================*/
-.section-how{
-  padding: 9.6rem 0;
-}
-
-.step-img{
-width: 50%;
-}
