--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,15 @@ opacity: 50%;
 .section-meals {
   padding: 9.6rem 0;
 }
+.tag{
+  display: inline-block;
+  padding: 0.4rem 0.8rem;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  background-color: #51cf66;
+  color: #333;
+  border-radius: 50%;
+}
 .meal-title{
   font-size: 2.4rem;
   color: #333;
@@ -186,11 +195,18 @@ opacity: 50%;
   list-style: none;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 2.6rem;
 }
 .meal-attribute{
   font-size: 1.8rem;
 }
+
+.section-meals .fa-regular{
+  height: 2.4rem;
+  width: 2.4rem;
+  color: #e67e22;
+}
 .meal-img{
   width: 100%;
 }
+
